Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1994,7 +1994,8 @@
     "def find_best_k(X_train, y_train, X_test, y_test, min_k=1, max_k=25):\n",
     "    #Your code here\n",
     "    best_k = 0\n",
-    "    best_score = \n"
+    "    best_score = 0 \n",
+    "    for i in range*\n"
    ]
   },
   {
