Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1995,7 +1995,7 @@
     "    #Your code here\n",
     "    best_k = 0\n",
     "    best_score = 0 \n",
-    "    for i in range*\n"
+    "    for i in range(min_k,max_k+1,)\n"
    ]
   },
   {
