--- a/index.ipynb
+++ b/index.ipynb
@@ -1995,7 +1995,8 @@
     "    #Your code here\n",
     "    best_k = 0\n",
     "    best_score = 0 \n",
-    "    for i in range(min_k,max_k+1,2)\n"
+    "    for i in range(min_k,max_k+1,2):\n",
+    "        \n"
    ]
   },
   {
