--- a/index.ipynb
+++ b/index.ipynb
@@ -1996,7 +1996,7 @@
     "    best_k = 0\n",
     "    best_score = 0 \n",
     "    for i in range(min_k,max_k+1,2):\n",
-    "        \n"
+    "        n_nei\n"
    ]
   },
   {
