--- a/index.ipynb
+++ b/index.ipynb
@@ -1996,7 +1996,8 @@
     "    best_k = 0\n",
     "    best_score = 0 \n",
     "    for k in range(min_k,max_k+1,2):\n",
-    "        knn.fit(X_train,y_train)\n"
+    "        knn.fit(X_train,y_train)\n",
+    "        knn.pred\n"
    ]
   },
   {
