Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1997,7 +1997,8 @@
     "    best_score = 0 \n",
     "    for k in range(min_k,max_k+1,2):\n",
     "        knn.fit(X_train,y_train)\n",
-    "        knn.pred\n"
+    "        knn.predict(X_test)\n",
+    "        \n"
    ]
   },
   {
