Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1998,7 +1998,7 @@
     "    for k in range(min_k,max_k+1,2):\n",
     "        knn.fit(X_train,y_train)\n",
     "        test_preds = knn.predict(X_test)\n",
-    "        f1_score(labels,preds)\n",
+    "        f1 = f1_score(labels,preds)\n",
     "        \n"
    ]
   },
