--- a/index.ipynb
+++ b/index.ipynb
@@ -1997,8 +1997,8 @@
     "    best_score = 0 \n",
     "    for k in range(min_k,max_k+1,2):\n",
     "        knn.fit(X_train,y_train)\n",
-    "        test_preds = knn.predict(X_test)\n",
-    "        f1 = f1_score(labels,preds)\n",
+    "        preds = knn.predict(X_test)\n",
+    "        f1 = f1_score(y_test,preds)\n",
     "        \n"
    ]
   },
