Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1999,7 +1999,8 @@
     "        knn.fit(X_train,y_train)\n",
     "        preds = knn.predict(X_test)\n",
     "        f1 = f1_score(y_test,preds)\n",
-    "        if f1\n",
+    "        if f1 > best_score:\n",
+    "            best_score = f1\n",
     "        \n"
    ]
   },
