--- a/index.ipynb
+++ b/index.ipynb
@@ -2001,7 +2001,8 @@
     "        f1 = f1_score(y_test,preds)\n",
     "        if f1 > best_score:\n",
     "            best_score = f1\n",
-    "            best_k = preds\n",
+    "            best_k = k\n",
+    "            \n",
     "        \n",
     "        \n"
    ]
