--- a/index.ipynb
+++ b/index.ipynb
@@ -2002,7 +2002,7 @@
     "        if f1 > best_score:\n",
     "            best_score = f1\n",
     "            best_k = k\n",
-    "            \n",
+    "    print()\n",
     "        \n",
     "        \n"
    ]
