Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -2003,14 +2003,14 @@
     "            best_score = f1\n",
     "            best_k = k\n",
     "    print(f'Best k : {best_k}')\n",
-    "    print(f'Best score: {best_}')\n",
+    "    print(f'Best score: {best_score}')\n",
     "        \n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -2019,8 +2019,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Value for k: 9\n",
-      "F1-Score: 0.7435897435897435\n"
+      "Best k : 1\n",
+      "Best score: 0.7607361963190185\n"
      ]
     }
    ],
