Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -1996,6 +1996,7 @@
     "    best_k = 0\n",
     "    best_score = 0 \n",
     "    for k in range(min_k,max_k+1,2):\n",
+    "        knn = KNeighborsClassifier(n_neighbors=k)\n",
     "        knn.fit(X_train,y_train)\n",
     "        preds = knn.predict(X_test)\n",
     "        f1 = f1_score(y_test,preds)\n",
@@ -2010,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -2019,8 +2020,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best k : 1\n",
-      "Best score: 0.7607361963190185\n"
+      "Best k : 9\n",
+      "Best score: 0.8\n"
      ]
     }
    ],
