--- a/index.ipynb
+++ b/index.ipynb
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -1994,7 +1994,7 @@
     "def find_best_k(X_train, y_train, X_test, y_test, min_k=1, max_k=25):\n",
     "    #Your code here\n",
     "    best_k = 0\n",
-    "    best_score = 0 \n",
+    "    best_score = 0.0\n",
     "    for k in range(min_k,max_k+1,2):\n",
     "        knn = KNeighborsClassifier(n_neighbors=k)\n",
     "        knn.fit(X_train,y_train)\n",
@@ -2004,14 +2004,14 @@
     "            best_score = f1\n",
     "            best_k = k\n",
     "    print(f'Best k : {best_k}')\n",
-    "    print(f'Best score: {best_score}')\n",
+    "    print(f'Best score: {float(best_score,)}')\n",
     "        \n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
