Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -2004,14 +2004,14 @@
     "            best_score = f1\n",
     "            best_k = k\n",
     "    print(f'Best k : {best_k}')\n",
-    "    print(f'Best score: {float(best_score,)}')\n",
+    "    print(f'F1 score: {best_score}')\n",
     "        \n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -2021,7 +2021,7 @@
      "output_type": "stream",
      "text": [
       "Best k : 9\n",
-      "Best score: 0.8\n"
+      "F1 score: 0.8\n"
      ]
     }
    ],
