--- a/index.ipynb
+++ b/index.ipynb
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -2003,15 +2003,15 @@
     "        if f1 > best_score:\n",
     "            best_score = f1\n",
     "            best_k = k\n",
-    "    print(f'Best k : {best_k}')\n",
-    "    print(f'F1 score: {best_score}')\n",
+    "    print(f'Best Value for k : {best_k}')\n",
+    "    print(f'F1-Score: {best_score}')\n",
     "        \n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -2020,8 +2020,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best k : 9\n",
-      "F1 score: 0.8\n"
+      "Best Value for k : 9\n",
+      "F1-Score: 0.8\n"
      ]
     }
    ],
