--- a/index.ipynb
+++ b/index.ipynb
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -2003,7 +2003,7 @@
     "        if f1 > best_score:\n",
     "            best_score = f1\n",
     "            best_k = k\n",
-    "    print(f'Best Value for k : {float(best_k,8)}')\n",
+    "    print(f'Best Value for k : {best_k}')\n",
     "    print(f'F1-Score: {best_score}')\n",
     "        \n",
     "        \n"
@@ -2011,21 +2011,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "float() takes at most 1 argument (2 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-37-33c5bb77f1a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfind_best_k\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscaled_data_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscaled_data_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# Expected Output:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Best Value for k: 9\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# F1-Score: 0.7435897435897435\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-36-e36c61e85b0a>\u001b[0m in \u001b[0;36mfind_best_k\u001b[0;34m(X_train, y_train, X_test, y_test, min_k, max_k)\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0mbest_score\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m             \u001b[0mbest_k\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Best Value for k : {float(best_k,8)}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'F1-Score: {best_score}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: float() takes at most 1 argument (2 given)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Value for k : 9.0\n",
+      "F1-Score: 0.8\n"
      ]
     }
    ],
