Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -2004,14 +2004,14 @@
     "            best_score = f1\n",
     "            best_k = k\n",
     "    print(f'Best Value for k : {best_k}')\n",
-    "    print(f'F1-Score: {best_score}')\n",
+    "    print(f'F1-Score: {float(best_score)}')\n",
     "        \n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
@@ -2020,7 +2020,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Value for k : 9.0\n",
+      "Best Value for k : 9\n",
       "F1-Score: 0.8\n"
      ]
     }
