Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2002,7 +2002,7 @@
     "        f1 = f1_score(y_test,preds)\n",
     "        if f1 > best_score:\n",
     "            best_score = f1\n",
-    "            best_k = k\n",
+    "            best_k = float(k\n",
     "    print(f'Best Value for k : {best_k}')\n",
     "    print(f'F1-Score: {float(best_score)}')\n",
     "        \n",
