Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
@@ -2004,14 +2004,14 @@
     "            best_score = f1\n",
     "            best_k = k\n",
     "    print(f'Best Value for k : {best_k}')\n",
-    "    print(f'F1-Score: {best_score}')\n",
+    "    print('F1-Score: {}'.format(best_score))\n",
     "        \n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {
     "scrolled": true
    },
