--- a/index.ipynb
+++ b/index.ipynb
@@ -2004,7 +2004,7 @@
     "            best_score = f1\n",
     "            best_k = k\n",
     "    print(f'Best Value for k : {best_k}')\n",
-    "    print('F1-Score: {}'.format(best_score))\n",
+    "    print('F1-Score: {}'.format({0:.6f}', best_score)\n",
     "        \n",
     "        \n"
    ]
