--- a/index.ipynb
+++ b/index.ipynb
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {
     "scrolled": true
    },
@@ -2004,14 +2004,14 @@
     "            best_score = f1\n",
     "            best_k = k\n",
     "    print(f'Best Value for k : {best_k}')\n",
-    "    print('F1-Score: {}'.format({0:.6f}', best_score)\n",
+    "    print('F1-Score: {}.format({0:.6f}', best_score)\n",
     "        \n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {
     "scrolled": true
    },
@@ -2021,7 +2021,7 @@
      "output_type": "stream",
      "text": [
       "Best Value for k : 9\n",
-      "F1-Score: 0.8\n"
+      "F1-Score: {}.format({0:.6f} 0.8\n"
      ]
     }
    ],
