Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1985,11 +1985,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-55-d6bd71bf6f86>, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-55-d6bd71bf6f86>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    print('F1-Score: {}.format('{0:.6f}', best_score)\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def find_best_k(X_train, y_train, X_test, y_test, min_k=1, max_k=25):\n",
     "    #Your code here\n",
@@ -2004,7 +2013,7 @@
     "            best_score = f1\n",
     "            best_k = k\n",
     "    print(f'Best Value for k : {best_k}')\n",
-    "    print('F1-Score: {}.format({0:.6f}', best_score)\n",
+    "    print('F1-Score: {}.format('{0:.6f}', best_score)\n",
     "        \n",
     "        \n"
    ]
