--- a/index.ipynb
+++ b/index.ipynb
@@ -1985,17 +1985,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-55-d6bd71bf6f86>, line 14)",
+     "evalue": "unexpected EOF while parsing (<ipython-input-57-3a3f25762209>, line 16)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-55-d6bd71bf6f86>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    print('F1-Score: {}.format('{0:.6f}', best_score)\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-57-3a3f25762209>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
@@ -2013,9 +2013,8 @@
     "            best_score = f1\n",
     "            best_k = k\n",
     "    print(f'Best Value for k : {best_k}')\n",
-    "    print('F1-Score: {}.format('{0:.6f}', best_score)\n",
-    "        \n",
-    "        \n"
+    "    print('F1-Score: {}'.format('{0:.6f}', best_score)\n",
+    "\n"
    ]
   },
   {
