Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1985,20 +1985,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-57-3a3f25762209>, line 16)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-57-3a3f25762209>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def find_best_k(X_train, y_train, X_test, y_test, min_k=1, max_k=25):\n",
     "    #Your code here\n",
@@ -2013,13 +2004,12 @@
     "            best_score = f1\n",
     "            best_k = k\n",
     "    print(f'Best Value for k : {best_k}')\n",
-    "    print('F1-Score: {}'.format('{0:.6f}', best_score)\n",
-    "\n"
+    "    print('F1-Score: {}'.format(best_score))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
@@ -2029,7 +2019,7 @@
      "output_type": "stream",
      "text": [
       "Best Value for k : 9\n",
-      "F1-Score: {}.format({0:.6f} 0.8\n"
+      "F1-Score: {0:.6f}\n"
      ]
     }
    ],
